# vv-app3-aita

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: pytest.yml
data/inputs/: requirements.csv
docs/: CI_BILLING_LOCK.md  INTERNAL_AI_VALIDATION_APP3_AITA.md  ROOT_SETUP_DEPENDENCIES.md  architecture.md  before_after.md  env_report.json  env_report.md
docs/demo/: README.md  RECRUTEUR_FAQ.md  demo_pitch.md  demo_scenario.md  demo_walkthrough.md
docs/demo/assets/inputs/: demo_input.csv  requirements.csv
docs/demo/assets/outputs_ai/: ai_suggestions.md  test_pack.json  test_pack.md
docs/demo/assets/outputs_no_ai/: test_pack.json  test_pack.md  tests.json  tests.md
src/vv_app3_aita/: __init__.py  checklist.py  export.py  generator.py  ia_assistant.py  main.py  models.py
templates/: _TEMPLATE_PYTHON_MODULE.py
templates/TEMPLATES_REF/: README.md  _TEMPLATE_HTML5.html  _TEMPLATE_PYTHON_TEST.py
tests/: test_checklist.py  test_env_check.py  test_export.py  test_generator.py  test_ia_assistant.py  test_main.py  test_models.py
tools/: env_check.py  load_env_secret.ps1
