# ============================================================
# pyproject.toml
# ------------------------------------------------------------
# Rôle :
#   Définition du projet Python et de son mode d’installation.
#
#   Ce fichier est utilisé par pip / setuptools pour :
#     - rendre le package installable (pip install -e ".[dev]" ou ".[dev,ai]")
#     - gérer correctement le layout "src/"
#     - éviter l’usage de PYTHONPATH
#
#   Choix d’architecture :
#     - layout src/ avec package explicite (vv_app2_tctc)
#     - séparation claire code / tests / data / docs
#
#   Ce choix est volontaire et commun aux 3 apps du portfolio
#   (APP1 QRA, APP2 TCTC, APP3 AITA).
# ============================================================

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "vv-app3-aita"
version = "0.2.12"
description = "APP3 AITA — AI-assisted Test Ideas & Traceability Accelerator (ISTQB-aligned, suggestion-only AI)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "jbtb-test" }
]
keywords = ["V&V", "traceability", "testing", "requirements", "coverage", "pytest"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

# Runtime dependencies (minimal, required to run the app)
dependencies = [
  "Jinja2>=3.1.4",
]

[project.optional-dependencies]
# Optional AI capability (suggestion-only)
ai = [
  "openai>=2.14.0",
]

# Dev/Test tooling (local + CI)
dev = [
  "pytest==9.0.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["vv_app3_aita*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-ra"

